@@ -152,8 +152,9 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
 - Bugfix when sending an item to another MC, the 'time' of the event was the 'time' of the last event, if resulting item
   was deleted then item was sent again, it used wrong 'time', now it uses the correct current time
 - Use plone.api.env.adopt_user and plone.api.env.adopt_roles instead of getSecurityManager/setSecurityManager
-- Show the next 'time limit' to give an advice to the advisers directly in the advices icons so the user does not have to click
-  on the different icons (not given, asked again, hidden) to know what is next 'time limit'.  Moreover, to avoid loosing too much
+- Show the next 'time limit' to give an advice directly in the advices icons so the user does not have to click
+  on the different icons (not given, asked again, hidden) to know what is next 'time limit'.  The icon color is blue if current
+  user is adviser for advice to give and is grey otherwise.  Moreover, to avoid loosing too much
   space in dashboards, advice icons are now displayed vertically in the dashboards and still horizontally on the item view
 
 3.3 (2015-02-27)
